# pimo

./: .gitattributes  .gitignore  .mermaid  .nox-report.json  .sbom  README.md  noxfile.py  pyproject.toml  sbom.json  tox.ini
.sbom/: .cyclonedx-py.sbom-3.10.json  .cyclonedx-py.sbom-3.11.json  .cyclonedx-py.sbom-3.12.json  .cyclonedx-py.sbom-3.9.json  .pipdeptree.sbom-3.10.mermaid  .pipdeptree.sbom-3.11.mermaid  .pipdeptree.sbom-3.12.mermaid  .pipdeptree.sbom-3.9.mermaid
src/: image.py  pimo.py
src/pimo/: pimo.py
tests/: test_pimo.py
