[build-system]
requires = ["setuptools>=46.1.0", "setuptools_scm[toml]>=5"]
build-backend = "setuptools.build_meta"

[project]
authors = [
    {name = "Michael Mussato", email = "michimussato@gmail.com"},
]
maintainers = [
    {name = "Michael Mussato", email = "michimussato@gmail.com"},
]
description = "TBD"
readme = "README.md"
name = "pimo"
dynamic = ["version"]
requires-python = ">= 3.9"
# https://pypi.org/project/inky/
dependencies = [
    "pillow",
    "pillow-lut",
    "inky[rpi]>=1.5.0,<1.6",
    "ascii-magic",
    "moon_clock @ git+https://github.com/michimussato/moon-clock.git",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

# https://stackoverflow.com/questions/75490231/pip-pyproject-toml-can-optional-dependency-groups-require-other-optional-depend#75503961
[project.optional-dependencies]
tests = [
    "nox",
    "pytest",
    "graphviz",
    "pipdeptree",
    "cyclonedx-bom",
]

[project.urls]
Repository = "https://github.com/michimussato/pimo.git"

[project.scripts]
pimo = "pimo.pimo:run"

[tool.setuptools]
# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
platforms = ["Linux"]
include-package-data = true
zip-safe = false  # This just means it's safe to zip up the bdist

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["docs*", "tests*"]

[tool.setuptools_scm]
# For smarter version schemes and other configuration options,
# check out https://github.com/pypa/setuptools_scm
version_scheme = "no-guess-dev"
